serde-with-extras/tests/snapshots/to_ast__empty_extras_to_ast.snap
---
source: serde-with-extras/tests/to_ast.rs
expression: data
---
TupleStruct {
    name: "__SERDE_EXTRAS__EXTRAS",
    len: 2,
    ops: [
        Field {
            value: Str(
                "string",
            ),
        },
        Field {
            value: Map {
                len: Some(
                    0,
                ),
                ops: [],
            },
        },
    ],
}
