serde-with-extras/tests/snapshots/to_ast__extras_to_ast.snap
---
source: serde-with-extras/tests/to_ast.rs
expression: data
---
TupleStruct {
    name: "__SERDE_EXTRAS__EXTRAS",
    len: 2,
    ops: [
        Field {
            value: Str(
                "string",
            ),
        },
        Field {
            value: Str(
                "{\"comment\":\"Hello\",\"comment-after\":\"Goodbye\"}",
            ),
        },
    ],
}
